--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,6 @@
 obj-m += ksocket.o
 
+EXTRA_CFLAGS := -DKSOCKET_EMBEDDED
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
 clean:
